--- a/.github/workflows/reporting-api-cicd.yml
+++ b/.github/workflows/reporting-api-cicd.yml
@@ -78,7 +78,7 @@ jobs:
             IMAGE_TAG=develop-$SHORT_COMMIT_HASH
             REPORTING_BUCKET=stg-gw-reporting-file
           else
-            IMAGE_TAG=other-$SHORT_COMMIT_HASH
+            IMAGE_TAG=feature-$SHORT_COMMIT_HASH
             REPORTING_BUCKET=stg-gw-reporting-file
           fi
           mkdir -p .tmp/template/
